--- a/platforms/ios/www/templates/coach.html
+++ b/platforms/ios/www/templates/coach.html
@@ -2,7 +2,7 @@
  
 	var text = {
 		categorySelect : {
-			text :  "Lets start by getting to know you a bit.<br /><br />Select a pack to start building your Fabric.",
+			text :  "Let's start by getting to know you a bit.<br /><br />Select a pack to start building your Fabric.",
 			classes : 'category-select',
 			arrow : false,
 		}, 
