--- a/platforms/ios/www/templates/passwordRecovery.html
+++ b/platforms/ios/www/templates/passwordRecovery.html
@@ -1,13 +1,13 @@
 <% var message = message || null %>
 <div id="pop-up">
 	<div class="close"></div>
-	<form id="recover">
+	<form id="recover" onsubmit="return false;">
 		<% if(message == "recover"){ %>
 			<p>Enter your email address & we'll help you reset your password.</p>
 		<% } else { %>
 	    	<p>You've entered an invalid username or password. If you forgot either one, enter your e-mail below:</p>
 	    <% } %>
 	    <input class="login-text" id="recover-email" type="text" placeholder="email" name="password" autocapitalize="off" autocorrect="off" autocomplete="off" />
-	    <input id="recover-password" type="submit" name="action" value="Recover" />
 	</form>
+	<button id="recover-password">Recover</button>
 </div>
