--- a/platforms/ios/www/templates/notifications.html
+++ b/platforms/ios/www/templates/notifications.html
@@ -3,6 +3,7 @@
     <% if(notifications.length > 0) { %>
 
         <% _.each(notifications, function(notification) { %>
+        
             <div class="notification" data-senderid="<%= notification.senderID %>" data-objecttype="<%= notification.objectType %>" data-objectid="<%= notification.objectID %>" data-notificationtype="<%= notification.notificationType %>">
                 <div class="avatar<% if(notification.senderID == '252990') { %> msPop<% } %>" <% if(notification.facebookID) { %> style="background-image: url(http://graph.facebook.com/<%= notification.facebookID %>/picture?width=100&height=100)"<% } %>></div>
                 <div class="content">
@@ -35,7 +36,10 @@
             </div>
         <% }); %>
 
-    <% } %>
-        
+    <% } else { %>
 
+        <p class="blank-message notification">No notifications yet</p>
+        <p class="blank-instructions">Don't worry - if something important happens, you'll be the first to know</p>
+
+    <% } %>
 </div>
