--- a/platforms/ios/www/templates/register.html
+++ b/platforms/ios/www/templates/register.html
@@ -24,11 +24,14 @@
             <div class="row birthday">
                 <div class="icon"></div>
                 <div class="fl">
-                    <input class="login-text" type="month" value="2014-1" name="register-birthday" id="register-birthday" autocapitalize="off" autocorrect="off" autocomplete="off"/>
+                    <input class="login-text" type="month" value="2015-1" name="register-birthday" id="register-birthday" autocapitalize="off" autocorrect="off" autocomplete="off"/>
                 </div>
             </div>
             <div class="gender-buttons">
-                <div id="male" class="active">Male</div>
-                <div id="female">Female</div>
+                <select name="gender" id="gender-select">
+                    <option value="null">Gender (optional)</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
             </div>
         </form>
