--- a/platforms/ios/www/templates/settingsNotifications.html
+++ b/platforms/ios/www/templates/settingsNotifications.html
@@ -42,6 +42,17 @@
 				</div>
 			</h4>
 		</div>
+		<div class="white-wide notification">
+			<h4 class="settings-button last">Daily Picks
+				<div class="onoffswitch">
+				    <input type="checkbox" class="onoffswitch-checkbox" id="emailPicks" <% if(settings.emailPicks == "1") { %> checked <% } %> />
+				    <label class="onoffswitch-label" for="notificationPicks">
+				        <div class="onoffswitch-inner"></div>
+				        <div class="onoffswitch-switch"></div>
+				    </label>
+				</div>
+			</h4>
+		</div>
 	</div>
 </div>
 
