--- a/platforms/ios/www/templates/userMatches.html
+++ b/platforms/ios/www/templates/userMatches.html
@@ -1,6 +1,7 @@
 <div id="user-matches">
     <div class="cf rel">
         <div id="match-config"></div>
+        <div id="invite-friends">Invite Friends</div>
         <% if(matches.length == 0) { %>
             <div id="no-matches">
                 <h1>Nobody here yet!</h1>
