--- a/platforms/ios/www/css/main-4.7-inch.css
+++ b/platforms/ios/www/css/main-4.7-inch.css
@@ -25,6 +25,9 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
+#share-buttons {
+    margin-top: 70px;
+}
 .line {
     font-size: 15px;
 }
