--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -147,10 +147,15 @@ header {
     text-align: center;
     padding: 15px;
     border-radius: 5px;
-    background-color: rgb(244, 0, 244);
+    color: #C0322F;
+    background-color: white;
     margin-top: 5px;
+    background-image: url(../images/invite/inviteIcon.png);
+    border: 1px solid;
     font-weight: bold;
-    color: white;
+    background-repeat: no-repeat;
+    background-size: 40px;
+    background-position: 40px center;
 }
 #invite {
     background-image: url(../images/invite/invite.jpg);
@@ -161,11 +166,11 @@ header {
     height: 95%;
     width: 90%;
 }
-#wrapper.invite h3 {
+#invite h3 {
     font-weight: bold;
     font-size: 18px;
 }
-#wrapper.invite h4 {
+#invite h4 {
     line-height: 30px;
     margin-top: 25px;
     font-size: 17px;
