--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -406,7 +406,31 @@ header nav #tap-menu {
 #messages {
     height: 100%;
 }
-#dashboard.slide { left: 87%; }
+
+
+
+/*      New Home       */
+
+#tab-control {
+    background-color: #C0322F;
+    padding: 10px;
+}
+#tab-control div {
+    text-transform: uppercase;
+    display: inline-block;
+    text-align: center;
+    border-radius: 3px;
+    font-weight: 600;
+    font-size: 0.9em;
+    color: white;
+    padding: 2%;
+    margin: 0 2%;
+    width: 25%;
+}
+#tab-control div.active {
+    background-color: white;
+    color: #C0322F;
+}
 #intro-nav {
     position: absolute;
     bottom: 30px;
@@ -620,6 +644,7 @@ div.left.button.back:active { opacity: 0.5; }
     font-size: 10px;
     font-weight: lighter;
 }
+
 .queued-movie-poster {
     width: 56px;
     height: 83px;
