--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -126,7 +126,6 @@ header {
     width: 100%;
     z-index: 1001;
     top: 0;
-    border-bottom: 1px solid rgb(214, 213, 217);
 }
 .follow-list header {
     top: initial;
@@ -212,10 +211,10 @@ header {
 #wrapper.welcome #chat-menu { display: none; }
 #wrapper.rate header { border-bottom: 0; }
 header nav {
-    background: -webkit-linear-gradient(#a21600, #d32724);
+    background-color: #A21600;
 	position: relative;
 	text-align: center;
-    height: 50px;
+    height: 45px;
     color: #FFF;
 }
 
@@ -412,8 +411,8 @@ header nav #tap-menu {
 /*      New Home       */
 
 #tab-control {
-    background-color: #C0322F;
-    padding: 10px;
+    background-color: #A21600;
+    padding: 7px 10px;
 }
 #tab-control div {
     text-transform: uppercase;
@@ -423,13 +422,39 @@ header nav #tap-menu {
     font-weight: 600;
     font-size: 0.9em;
     color: white;
-    padding: 2%;
+    padding: 5px 2%;
     margin: 0 2%;
     width: 25%;
 }
 #tab-control div.active {
     background-color: white;
     color: #C0322F;
+}
+
+#home-content #pick {
+    background-repeat: no-repeat;
+    text-transform: uppercase;
+    background-size: 100%;
+    position: relative;
+    color: #FFFFFF;
+    width: 100%;
+}
+#home-content #pick-content {
+    padding: 84px 15px 12px;;
+    font-weight: 600;
+}
+#pick-content h1 {
+    font-size: 1.2em;
+    margin: 5px 0;
+}
+#pick .purchase-links {
+    position: absolute;
+    bottom: 15px;
+    right: 10px;
+}
+#pick-content #daily-pick {
+    font-size: 0.7em;
+
 }
 #intro-nav {
     position: absolute;
@@ -438,6 +463,7 @@ header nav #tap-menu {
     z-index: 2000;
     overflow: hidden;
 }
+
 #intro-nav ul { list-style: none; }
 #intro-nav ul li {
     float: left;
@@ -2685,8 +2711,8 @@ h1.pack-footer {
     display: inline-block;
     position: relative;
     margin: 0 3px;
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
     top: 5px;
 }
 .available-on {
