--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -466,8 +466,9 @@ header nav #tap-menu {
     text-transform: uppercase;
     color: rgb(81, 81, 81);
     text-align: center;
-    font-size: 0.8em;
+    font-size: 0.7em;
     padding: 15px;
+    height: 61px;
 }
 #people .bold {
     color: #000;
