--- a/platforms/ios/www/templates/homeHeader.html
+++ b/platforms/ios/www/templates/homeHeader.html
@@ -6,7 +6,8 @@
     var postButton = postButton || false; 
     var doneInter = doneInter || false; 
     var filterButton = filterButton || false; 
-    var picture = facebookID ? "https://graph.facebook.com/"+ facebookID +"/picture?height=170&width=170" : "hi";
+    console.log( facebookID );
+    var picture = "hello";
 %>
 
 <nav>
